--- a/SolarOmen/imgui.ini
+++ b/SolarOmen/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Editor]
 Pos=57,204
-Size=376,638
+Size=632,705
 Collapsed=0
 
 [Window][Delete?]
@@ -46,5 +46,15 @@ Collapsed=0
 [Window][Brain]
 Pos=60,60
 Size=317,260
+Collapsed=0
+
+[Window][node editor]
+Pos=678,145
+Size=697,435
+Collapsed=0
+
+[Window][Node editor]
+Pos=852,81
+Size=946,759
 Collapsed=0
 
