--- a/SolarOmen/imgui.ini
+++ b/SolarOmen/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=660,169
+Pos=1524,18
 Size=1175,742
 Collapsed=0
 
@@ -54,7 +54,22 @@ Size=697,435
 Collapsed=0
 
 [Window][Node editor]
-Pos=852,81
+Pos=965,644
 Size=946,759
+Collapsed=1
+
+[Window][World name]
+Pos=0,18
+Size=376,731
+Collapsed=0
+
+[Window][Inspector]
+Pos=1524,18
+Size=376,731
+Collapsed=0
+
+[Window][Performance]
+Pos=826,194
+Size=695,553
 Collapsed=0
 
