--- a/SolarOmen/imgui.ini
+++ b/SolarOmen/imgui.ini
@@ -69,7 +69,12 @@ Size=376,731
 Collapsed=0
 
 [Window][Performance]
-Pos=826,194
-Size=695,553
+Pos=1254,166
+Size=695,552
+Collapsed=0
+
+[Window][Debug]
+Pos=1339,347
+Size=538,342
 Collapsed=0
 
