--- a/SolarOmen/SolarOmen.vcxproj.filters
+++ b/SolarOmen/SolarOmen.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="components\SolarCamera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="components\SolarLight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\SolarMath.h">
@@ -360,6 +363,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="components\SolarCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="components\SolarLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
