--- a/SolarOmen/SolarOmen.vcxproj.filters
+++ b/SolarOmen/SolarOmen.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="components\SolarLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SolarSpline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\SolarMath.h">
@@ -366,6 +369,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="components\SolarLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SolarSpline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
