--- a/SolarOmen/imgui.ini
+++ b/SolarOmen/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=1524,18
+Pos=781,18
 Size=1175,742
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=403,169
+Pos=1288,259
 Size=550,695
 Collapsed=0
 
@@ -69,12 +69,22 @@ Size=376,731
 Collapsed=0
 
 [Window][Performance]
-Pos=896,210
-Size=695,552
-Collapsed=1
+Pos=340,108
+Size=401,409
+Collapsed=0
 
 [Window][Debug]
 Pos=1339,347
 Size=538,342
+Collapsed=0
+
+[Window][Console]
+Pos=98,57
+Size=385,399
+Collapsed=0
+
+[Window][Room]
+Pos=113,56
+Size=505,480
 Collapsed=0
 
