--- a/SolarOmen/SolarOmen.vcxproj.filters
+++ b/SolarOmen/SolarOmen.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="game\Multipalyer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="serialization\RawFontImporter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\SolarMath.h">
@@ -299,6 +302,9 @@
     <ClInclude Include="game\Multiplayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="serialization\RawFontImporter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders\unlit.vert.hlsl" />
@@ -335,6 +341,8 @@
     <FxCompile Include="shaders\depth_only.vert.hlsl" />
     <FxCompile Include="shaders\depth_reduction.comp.hlsl" />
     <FxCompile Include="shaders\depth_reduction_down.comp.hlsl" />
+    <FxCompile Include="shaders\text.vert.hlsl" />
+    <FxCompile Include="shaders\text.pixl.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="vendor\imgui\LICENSE" />
