--- a/SolarOmen/imgui.ini
+++ b/SolarOmen/imgui.ini
@@ -84,7 +84,12 @@ Size=385,399
 Collapsed=0
 
 [Window][Room]
-Pos=117,177
+Pos=115,178
 Size=505,480
+Collapsed=0
+
+[Window][Build]
+Pos=660,111
+Size=520,582
 Collapsed=0
 
